--- a/my-app/src/components/NotesInput/notesInput.module.css
+++ b/my-app/src/components/NotesInput/notesInput.module.css
@@ -4,7 +4,7 @@
   box-shadow: 0 0 3px 0 black;
   width: 100%;
   max-width: 550px;
-  border: 1px solid #e0e0e0;;
+  border: 1px solid #e0e0e0;
   height: fit-content;
   border-radius: 5px;
   display: flex;
