few css changes

--- a/my-app/src/components/Notes/notesCard.module.css
+++ b/my-app/src/components/Notes/notesCard.module.css
@@ -11,6 +11,7 @@
 .notes_card {
   width: 25%;
   padding: 10px 15px;
+  padding-bottom: 0;
   border-radius: 15px;
   border: 1px solid #e0e0e0;
   position: relative;
@@ -25,6 +26,8 @@
   gap: 5px;
   align-items: center;
   visibility: hidden;
+  margin-top: auto;
+  padding: 15px 0;
 }
 
 .delete_button {
