--- a/my-app/src/components/Notes/notes.module.css
+++ b/my-app/src/components/Notes/notes.module.css
@@ -1,9 +1,8 @@
 .note_items {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
+  align-items: flex-start;
   gap: 10px;
-  align-items: stretch;
   justify-content: center;
   
 }
