--- a/my-app/src/components/Notes/components/ColorPalette/colorPalette.module.css
+++ b/my-app/src/components/Notes/components/ColorPalette/colorPalette.module.css
@@ -4,7 +4,7 @@
   height: 40px;
   left: 0;
   background: #fff;
-  box-shadow: 0 0 3px 0 black;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
   display: flex;
   gap: 10px;
   align-items: center;
