--- a/my-app/src/components/Notes/notes.module.css
+++ b/my-app/src/components/Notes/notes.module.css
@@ -1,8 +1,8 @@
 .note_items {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
   gap: 10px;
+  align-self: center;
   justify-content: center;
-  
+  padding: 15px;
 }
