--- a/src/components/Notes/components/NotesCard/notesCard.module.css
+++ b/src/components/Notes/components/NotesCard/notesCard.module.css
@@ -74,5 +74,10 @@
   .notes_card {
     width: 100%;
     max-width: 100%;
+    min-width: none;
+  }
+
+  .note_actions {
+    visibility: visible;
   }
 }
