--- a/src/components/ConfirmDeleteModal/confirmDeleteModal.module.css
+++ b/src/components/ConfirmDeleteModal/confirmDeleteModal.module.css
@@ -7,7 +7,7 @@
   padding: 5px 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  width: 95vw;
+  width: 95%;
   max-width: 400px;
   display: flex;
   flex-direction: column;
@@ -30,4 +30,10 @@
   border-radius: 10px;
   color: black;
   cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .modal_content {
+    max-width: 80%;
+  }
 }
