--- a/src/components/NotesHeader/notesHeader.module.css
+++ b/src/components/NotesHeader/notesHeader.module.css
@@ -3,3 +3,19 @@
   align-items: center;
   gap: 10px;
 }
+
+.header img {
+  width: 60px;
+  height: 60px;
+}
+
+@media screen and (max-width: 600px) {
+  .heading {
+    font-size: 20px;
+  }
+
+  .header img {
+    width: 50px;
+    height: 50px;
+  }
+}
