--- a/src/components/Notes/notes.module.css
+++ b/src/components/Notes/notes.module.css
@@ -6,3 +6,9 @@
   justify-content: center;
   padding: 15px;
 }
+
+@media screen and (max-width: 768px) {
+  .note_items {
+    max-width: 90%;
+  }
+}
